// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component RewardOption renders prize reward correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 304,
      "justifyContent": "flex-end",
      "opacity": 1,
      "width": 225,
    }
  }
  testID="reward-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "height": 210,
          "justifyContent": "center",
          "width": 210,
        },
      ]
    }
  >
    <View
      borderColor="#5EC98C"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#5EC98C",
            "borderRadius": 8,
            "borderWidth": 3,
            "flexDirection": "column",
            "height": 200,
            "justifyContent": "flex-start",
            "width": 202.5,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 110,
              "justifyContent": "center",
              "marginHorizontal": 6,
              "marginTop": 100,
            },
          ]
        }
      >
        <Text
          alignCenter={false}
          allowFontScaling={true}
          color="#5EC98C"
          fontFamily="BOLD ITALIC"
          isUnderlined={false}
          isUppercase={true}
          maxFontSizeMultiplier={1.3}
          size="XXSMALL"
          style={
            Array [
              Object {
                "color": "#5EC98C",
                "fontFamily": "CalibreBoldItalic",
                "fontSize": 21,
                "justifyContent": "center",
                "textAlign": "left",
                "textDecorationColor": "#5EC98C",
                "textDecorationLine": "none",
                "textDecorationStyle": "solid",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          PRIZE
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 63,
          "height": 126,
          "justifyContent": "center",
          "position": "absolute",
          "top": 30,
          "width": 126,
        },
      ]
    }
  >
    <View
      borderColor="#5EC98C"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#5EC98C",
            "borderRadius": 60,
            "borderWidth": 3,
            "height": 120,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": 120,
          },
        ]
      }
      type="PRIZE"
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "a",
          }
        }
        style={
          Array [
            Object {
              "height": 225,
              "width": 150,
            },
          ]
        }
        type="PRIZE"
      />
    </View>
    <View
      bgColor="#5EC98C"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#5EC98C",
            "borderColor": "#5EC98C",
            "borderRadius": 22.5,
            "bottom": -20,
            "justifyContent": "center",
            "maxWidth": 120,
            "minWidth": 60,
            "paddingHorizontal": 7.5,
            "paddingTop": 10,
            "position": "absolute",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="MEDIUM"
        isUnderlined={false}
        isUppercase={false}
        marginBottom={0}
        maxFontSizeMultiplier={1.3}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Calibre-Medium",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
          ]
        }
      >
        x1
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component RewardOption renders ticket reward correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 304,
      "justifyContent": "flex-end",
      "opacity": 1,
      "width": 225,
    }
  }
  testID="reward-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "height": 210,
          "justifyContent": "center",
          "width": 210,
        },
      ]
    }
  >
    <View
      borderColor="#7C89D8"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#7C89D8",
            "borderRadius": 8,
            "borderWidth": 3,
            "flexDirection": "column",
            "height": 200,
            "justifyContent": "flex-start",
            "width": 202.5,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 110,
              "justifyContent": "center",
              "marginHorizontal": 6,
              "marginTop": 100,
            },
          ]
        }
      >
        <Text
          alignCenter={false}
          allowFontScaling={true}
          color="#7C89D8"
          fontFamily="BOLD ITALIC"
          isUnderlined={false}
          isUppercase={true}
          maxFontSizeMultiplier={1.3}
          size="XXSMALL"
          style={
            Array [
              Object {
                "color": "#7C89D8",
                "fontFamily": "CalibreBoldItalic",
                "fontSize": 21,
                "justifyContent": "center",
                "textAlign": "left",
                "textDecorationColor": "#7C89D8",
                "textDecorationLine": "none",
                "textDecorationStyle": "solid",
                "textTransform": "uppercase",
              },
            ]
          }
        >
          TICKETS
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 63,
          "height": 126,
          "justifyContent": "center",
          "position": "absolute",
          "top": 30,
          "width": 126,
        },
      ]
    }
  >
    <View
      borderColor="#7C89D8"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#C4D1FA",
            "borderColor": "#7C89D8",
            "borderRadius": 60,
            "borderWidth": 3,
            "height": 120,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": 120,
          },
        ]
      }
      type="TICKETS"
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Array [
            Object {
              "height": 72,
              "width": 72,
            },
          ]
        }
        type="TICKETS"
      />
    </View>
    <View
      bgColor="#7C89D8"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#7C89D8",
            "borderColor": "#7C89D8",
            "borderRadius": 22.5,
            "bottom": -20,
            "justifyContent": "center",
            "maxWidth": 120,
            "minWidth": 60,
            "paddingHorizontal": 7.5,
            "paddingTop": 10,
            "position": "absolute",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="MEDIUM"
        isUnderlined={false}
        isUppercase={false}
        marginBottom={0}
        maxFontSizeMultiplier={1.3}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Calibre-Medium",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
          ]
        }
      >
        x500
      </Text>
    </View>
  </View>
</View>
`;
